# morphony

./: .gitignore  ACTIVE_TASK.md  AGENTS.md  LICENSE  PROGRESS.md  実行プロンプト.txt
morphony/: .gitignore  README.md  README_JA.md  VERSION.txt  pyproject.toml
morphony/configs/: README.md  agent_config.yaml
morphony/docs/: README.md
morphony/docs/PLAN/: 1.最小仕様（MVP）.txt  2.追加修正案.txt  3.バックログ.txt  5.終点チェック01.txt  6.終点チェック02.txt  7.ロードマップ.txt
morphony/runtime/: lifecycle.json
morphony/src/morphony/: __init__.py  cli.py  memory_store.py
morphony/src/morphony/config/: __init__.py  loader.py  overrides.py  schema.py
morphony/src/morphony/events/: __init__.py  audit_log.py  bus.py
morphony/src/morphony/improvement/: __init__.py  engine.py
morphony/src/morphony/integrations/: __init__.py  telegram.py
morphony/src/morphony/lifecycle/: checkpoint.py  recovery.py  state_machine.py
morphony/src/morphony/memory/: __init__.py  semantic_store.py
morphony/src/morphony/models/: __init__.py  enums.py  memory.py  tool.py
morphony/src/morphony/observability/: __init__.py  engine.py
morphony/tests/: test_brownfield.py  test_checkpoint_recovery.py  test_cli.py  test_cli_ops.py  test_config.py  test_e2e_benchmark.py  test_escalation.py  test_events.py  test_improvement.py  test_lifecycle.py  test_memory_issue16.py  test_memory_store.py  test_models.py  test_observability.py  test_queue_runner.py  test_review.py  test_safety.py  test_self_evaluation.py  test_semantic_memory_store.py  test_telegram_bridge.py  test_tools.py  test_tools_mvp.py  test_trust.py
(+27 files in other folders)
